--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_GITHUB_URL="http://api.github.com"
+REACT_APP_GITHUB_URL="https://api.github.com"
 REACT_APP_GITHUB_TOKEN="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"
